--- a/src/app/shared/scss/_footer.scss
+++ b/src/app/shared/scss/_footer.scss
@@ -1,5 +1,12 @@
 .footer { background: $primary; }
-.footer p { display: block; color: $text-secondary; line-height: 75px; border-top: 1px solid $divider; }
+
+.footer p {
+	display: block;
+	color: $text-secondary; 
+	line-height: 75px; 
+	border-top: 1px solid $divider;
+	margin-bottom: 0; 
+}
 
 .wrapper {
 	min-height: 100%;
@@ -7,6 +14,7 @@
 	height: 100%;
 	margin: 0 auto -75px; /* the bottom margin is the negative value of the footer's height */
 }
+
 .footer, .push {
 	height: 75px; /* .push must be the same height as .footer */
 }
